--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.0",
     "react-slick": "^0.26.1",
+    "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
